--- a/.github/workflows/release-vsix.yml
+++ b/.github/workflows/release-vsix.yml
@@ -5,7 +5,7 @@ on:
       -
   pull_request:
     branches:
-      - 
+      -
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: "14"
       - run: npm install
       - run: npm run vscode:prepublish
       - name: Install vsce
@@ -24,5 +24,15 @@ jobs:
         with:
           path: vscode-kport-0.0.1.vsix
           name: vscode-kport.vsix
-
-
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: vscode-kport-0.0.1.vsix # Path to your VSIX artifact
+          tag_name: v1.0.0 # Replace with the desired tag name for the release
+          title: Release 1.0.0 # Replace with the desired release title
+          body: Release notes go here # Replace with the release notes
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
